# quantify

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: static.yml
cmake/: ctest.cmake  docs.cmake
docs/: Doxyfile  header.html  layout.xml
docs/assets/: overrides.css
docs/pages/: CustomConversions.md  CustomScalesNUnits.md  Examples.md  FAQ.md  ForcingUnits.md  GettingStarted.md  InstallationNBuildGuide.md  Limitations.md  Quantities.md  Scales.md  UnitExpressions.md  WritingUnitAgnosticFuns.md
include/quantify/: concepts.cppm  frac.cppm  mul.cppm  preface.cppm  quantify.cppm  quantity.cppm  ratio.cppm  reduce_rules.cppm  unit_macros.h  units.cppm  units_core.cppm
include/quantify/core/: concepts.cppm  preface.cppm  quantify_core.cppm  quantity.cppm  ratio.cppm
include/quantify/expressions/: frac.cppm  mul.cppm  reduce_rules.cppm
include/quantify/scales/: scales.cppm
include/quantify/scales/base_units/: angle.cppm  distance.cppm  electric_current.cppm  light_intensity.cppm  mass.cppm  substance.cppm  temperature.cppm  time.cppm
include/quantify/scales/derived_units/: absorbed_dose.cppm  catalytic_activity.cppm  dose_equivalent.cppm  electric_capacitance.cppm  electric_charge.cppm  electric_conductance.cppm  electric_resistance.cppm  emf.cppm  energy.cppm  force.cppm  frequency.cppm  illuminance.cppm  inductance.cppm  luminous_flux.cppm  magnetic_flux.cppm  magnetic_flux_density.cppm  power.cppm  pressure.cppm  radionuclide_activity.cppm  solid_angle.cppm  speed.cppm  volume.cppm
test/: units_module.cpp
test/common/: common.h  type_name.h
